--- a/dashboard.html
+++ b/dashboard.html
@@ -196,7 +196,7 @@
     </a>
     </li>
     
-    <li class=nav-item><a class="nav-link text-decoration-none" >
+    <li class=nav-item><a class="nav-link text-decoration-none"href =C:\Users\Admin\OneDrive\Desktop\NEWBATCH\index.html >
     <button class="btn btn-sm btn-outline-dark">SIGN OUT</button>
     </a>
     </li>
